OO-6514: fix the last queries and unit tests